@@ -1,0 +1,9 @@
+Title: netscaler_vserver: health status is now configurable
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480958242
+Class: feature
+
+
