@@ -18,6 +18,7 @@
     * 3996 agent_netapp clustermode: now uses a fallback query to determine the node name if the intial query fails
     * 4108 ipmi_sensors: new options available...
     * 4109 websphere_mq_instance, websphere_mq_instance.manager: new checks for Websphere MQ
+    * 4110 netscaler_vserver: health status is now configurable
     * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
     * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
